...
            </objects>
            <point key="canvasLocation" x="766" y="366"/>
        </scene>
        <!--SecondVC-->
        <scene sceneID="FQd-1R-O0h">
            <objects>
                <viewController id="b3u-xK-yAl" customClass="SecondVC" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ey1-f3-CeD"/>
                        <viewControllerLayoutGuide type="bottom" id="sfS-YD-71C"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="hcF-LK-DIt">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HG-wd-erC">
                                <rect key="frame" x="105" y="145" width="110" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="MainLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
